made streams use multiple lines